--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,8 @@ dependencies:
   google_fonts:
   shared_preferences:
   cupertino_icons: ^1.0.2
+  webview_flutter: ^3.0.0
+  flutter_webview_plugin: ^0.4.0
 
 dev_dependencies:
   flutter_test:
